# cckit

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  config.toml.example  dist-workspace.toml  mise.toml
.claude/plans/: foamy-riding-karp.md  goofy-giggling-rain.md  goofy-sauteeing-galaxy.md  magical-noodling-boot.md  snoopy-tinkering-cake.md  zippy-sparking-hejlsberg.md
.claude/skills/release-cckit/: SKILL.md
.github/workflows/: release.yml  test.yml
docs/: SPEC.md  auto-focus-spec.md  session-state-diagram.md
examples/notify-inputs/: session-end.json  session-start.json  stop.json
macos/: AppIcon.icns  Info.plist
scripts/macos/: build_app.sh  gen_icns.sh
src/: cli.rs  lib.rs  main.rs
src/monitor/: focus.rs  hook.rs  menubar.rs  mod.rs  notification.rs  session.rs  setup.rs  storage.rs  tui.rs  window.rs
